--- a/hdfs/hdfs-customwrapper-5.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
-    <version>20180918</version>
+    <version>20181003</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -287,6 +287,14 @@
                   <groupId>com.sun.jersey</groupId>
                   <artifactId>jersey-server</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-json</artifactId>
+                </exclusion>
+                 <exclusion>
+                    <groupId>com.jcraft</groupId>
+                    <artifactId>jsch</artifactId>
+                </exclusion>                
             </exclusions> 
 
         </dependency>
@@ -302,6 +310,19 @@
                 </exclusion>
             </exclusions>             
         </dependency>
+
+
+       <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-aws</artifactId>
+            <version>${hadoop.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>             
+        </dependency>        
         
        <dependency>
             <groupId>com.amazonaws</groupId>
