--- a/hdfs/hdfs-customwrapper-7.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-7.0/pom.xml
@@ -7,26 +7,26 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hdfs-customwrapper-6.0</artifactId>
+    <artifactId>denodo-hdfs-customwrapper-7.0</artifactId>
     <version>20181003</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
     <properties>
-        <aws.sdk.version>1.11.199</aws.sdk.version>
+        <aws.sdk.version>1.11.271</aws.sdk.version>    
         <avro.version>1.8.2</avro.version>
-        <commons-lang.version>2.6</commons-lang.version> 
+        <commons-codec.version>1.10</commons-codec.version>
         <commons-io.version>2.6</commons-io.version>
-        <hadoop.version>2.9.1</hadoop.version>
-        <hadoop.lzo.version>0.4.20</hadoop.lzo.version>
-        <httpclient.version>4.5.2</httpclient.version>  <!-- minimin required by aws-sdk  -->
-        <httpcore.version>4.4.4</httpcore.version>  
-        <jackson.version>2.9.4</jackson.version>      
-        <jets3t.version>0.9.4</jets3t.version>   
-        <log4j.version>1.2.15</log4j.version>    
-        <jetty.version>6.1.26</jetty.version>    
-        <slf4j.version>1.7.10</slf4j.version> 
-        <vdp.version>6.0.0</vdp.version>        
+        <commons-lang.version>2.6</commons-lang.version>
+        <hadoop.version>3.1.1</hadoop.version> <!-- Requires java 8 -->
+        <hadoop.lzo.version>0.4.20</hadoop.lzo.version>   
+        <httpclient.version>4.5.2</httpclient.version>  <!-- min required by aws-sdk  -->
+        <httpcore.version>4.4.4</httpcore.version>   
+        <jackson.version>2.9.4</jackson.version>   
+        <log4j2.version>2.8.2</log4j2.version>
+        <parquet.version>1.9.0</parquet.version>
+        <slf4j.version>1.7.10</slf4j.version>     
+        <vdp.version>7.0.0</vdp.version>
     </properties>
 
     <!-- *************************** -->
@@ -61,9 +61,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <!-- VDP 6.0 requires 1.7 -->
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <!-- VDP 7.0 requires 1.8 -->
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>US-ASCII</encoding>
                 </configuration>
             </plugin>
@@ -104,8 +104,8 @@
                         <Extension-Name>${project.artifactId}</Extension-Name>
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
-                        <Extension-Target-Version>6.0</Extension-Target-Version>
-                        <!-- Uncomment when an update of VDP 5.5 is required -->
+                        <Extension-Target-Version>7.0</Extension-Target-Version>
+                        <!-- Uncomment when an update of VDP 7.0 is required -->
                        <!-- <Extension-Target-Update>20140826</Extension-Target-Update> -->
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
@@ -130,7 +130,7 @@
                                 <exclude>META-INF/*.RSA</exclude>
                             </excludes>
                         </filter>
-                    </filters>
+                    </filters>                     
                 </configuration>
                 <executions>
                     <execution>
@@ -177,7 +177,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -209,7 +209,6 @@
     <!-- ****************************************************************** -->
     <dependencies>
 
-
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server</artifactId>
@@ -221,24 +220,31 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
-            <scope>provided</scope>  <!--  by VDP -->            
-        </dependency>
-        
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
-            <scope>provided</scope>  <!--  by VDP -->            
+            <scope>provided</scope>  <!--  by VDP -->
         </dependency>
     
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
-            <scope>provided</scope>  <!--  by VDP -->            
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j2.version}</version>
+            <scope>provided</scope>  <!--  by VDP -->
         </dependency>
-        
+    
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j2.version}</version>
+            <scope>provided</scope>  <!--  by VDP -->
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j2.version}</version>
+            <scope>provided</scope>  <!--  by VDP -->
+        </dependency>        
+        
+       <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
             <version>${avro.version}</version>
@@ -247,14 +253,26 @@
                     <groupId>*</groupId>
                     <artifactId>*</artifactId>
                 </exclusion>
-            </exclusions> 
-        </dependency>      
-       
+            </exclusions>             
+        </dependency>  
+               
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
             <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>           
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>javax.servlet-api</artifactId>
+                </exclusion>            
                 <exclusion>
                     <groupId>commons-cli</groupId>
                     <artifactId>commons-cli</artifactId>
@@ -279,19 +297,22 @@
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>*</artifactId>
                 </exclusion>
-
                 <exclusion>
-                  <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-core</artifactId>
+                    <groupId>jetty</groupId>
+                    <artifactId>org.eclipse.jetty</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-server</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-util</artifactId>
                 </exclusion>
                 <exclusion>
                   <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-server</artifactId>
-                </exclusion>
-                 <exclusion>
-                    <groupId>com.sun.jersey</groupId>
-                    <artifactId>jersey-json</artifactId>
-                 </exclusion>     
+                  <artifactId>*</artifactId>
+                </exclusion>    
                  <exclusion>
                     <groupId>com.jcraft</groupId>
                     <artifactId>jsch</artifactId>
@@ -322,7 +343,7 @@
                 </exclusion>
             </exclusions>             
         </dependency>
-               
+        
        <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-s3</artifactId>
@@ -357,9 +378,22 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>             
+        </dependency>    
+
+       <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>${aws.sdk.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>             
         </dependency>                 
                 
          <!-- >An incorrect version of jackson causes: java.lang.NoClassDefFoundError: Could not initialize class com.amazonaws.ClientConfiguration -->
+        <!-- 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -371,45 +405,32 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency> 
-                            
+         -->
+        <!--  -->                
+        
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-azure-datalake</artifactId>
             <version>${hadoop.version}</version>
-        </dependency>
-                        
+        </dependency>  
+
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-azure</artifactId>
             <version>${hadoop.version}</version>
-        </dependency>
-                   
-       <!--   HADOOP-9471 hadoop-client wrongfully excludes jetty-util JAR               -->                  
-       <dependency>
-            <groupId>org.mortbay.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>  
-        
-        <dependency> 
-            <groupId>com.hadoop.gplcompression</groupId>
-            <artifactId>hadoop-lzo</artifactId>
-            <version>${hadoop.lzo.version}</version>
-            <scope>runtime</scope>             
-        </dependency>
-        
-        <dependency>
-            <groupId>net.java.dev.jets3t</groupId>
-            <artifactId>jets3t</artifactId>
-            <version>${jets3t.version}</version>
-               <exclusions>
+            <exclusions>
                 <exclusion>
-                    <groupId>*</groupId>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-common</artifactId>
+                </exclusion>  
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
                     <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>          
-        </dependency>   
-        
+                </exclusion>  
+            </exclusions>
+        </dependency>
+              
+                        
         <dependency> 
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -421,25 +442,51 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>${httpcore.version}</version>
-        </dependency> 
+        </dependency>        
 
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>${commons-codec.version}</version>
+      </dependency>        
+        
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-hadoop</artifactId>
+            <version>${parquet.version}</version>      
+            <scope>runtime</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>        
+        
+        <dependency> 
+            <groupId>com.hadoop.gplcompression</groupId>
+            <artifactId>hadoop-lzo</artifactId>
+            <version>${hadoop.lzo.version}</version>
+            <scope>runtime</scope>              
+        </dependency>
+      
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
-            <artifactId>denodo-hadoop-commons-6.0</artifactId>
+            <artifactId>denodo-hadoop-commons-7.0</artifactId>
             <version>${project.version}</version>
         </dependency>
-    
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
-          
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>${commons-lang.version}</version>
-        </dependency>  
+        
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
+      </dependency>
+            
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>${commons-lang.version}</version>
+      </dependency>        
 
     </dependencies>
 </project>
