--- a/hdfs/hdfs-customwrapper-5.5/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.5/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-5.5</artifactId>
-    <version>20181003</version>
+    <version>20181008</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -25,7 +25,7 @@
         <log4j.version>1.2.15</log4j.version>   
         <jackson.version>2.9.4</jackson.version> 
         <jersey.bundle.version>1.15</jersey.bundle.version>
-        <jets3t.version>0.9.4</jets3t.version>  
+        <jets3t.version>0.9.4</jets3t.version>    <!--  0.9.4 Fix S3 Service - Amazon signature version 4 -->   
         <jetty.version>6.1.26</jetty.version>              
         <slf4j.version>1.7.10</slf4j.version> 
         <vdp.version>5.5.0</vdp.version>    
@@ -161,7 +161,13 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
+            <!-- 
+             -Copy dependencies to /lib, then the assembly plugin retrieves jars from there, 
+              instead of using dependencySet element in dist.xml as the useTransitiveDependencies
+              property is an all/nothing option, and we want to include only the transitive dependencies
+               not excluded in this pom.
+             -->            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -428,6 +434,7 @@
             <scope>runtime</scope>              
         </dependency>
         
+        <!--  Overrides jets3t from hadoop-commons with v0.94 -> Fix S3 Service - Amazon signature version 4 -->        
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
             <artifactId>jets3t</artifactId>
