--- a/commons/hadoop-commons-5.0/pom.xml
+++ b/commons/hadoop-commons-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hadoop-commons-5.0</artifactId>
-    <version>20190109</version>
+    <version>20190212</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
@@ -16,8 +16,8 @@
         <avro.version>1.8.2</avro.version>
         <commons-csv.version>1.4</commons-csv.version>
         <commons-io.version>2.6</commons-io.version>   
-        <commons-lang.version>2.6</commons-lang.version>     
-        <hadoop.version>2.9.1</hadoop.version>
+        <commons-lang.version>2.6</commons-lang.version>
+        <hadoop.version>2.7.0-mapr-1808</hadoop.version>
         <log4j.version>1.2.15</log4j.version>
         <slf4j.version>1.7.10</slf4j.version>
         <vdp.version>5.0.0_2</vdp.version>
@@ -184,7 +184,7 @@
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-hdfs-client</artifactId>
+            <artifactId>hadoop-hdfs</artifactId>
             <version>${hadoop.version}</version>
             <exclusions>
                 <exclusion>
