--- a/commons/hadoop-commons-5.0/pom.xml
+++ b/commons/hadoop-commons-5.0/pom.xml
@@ -17,7 +17,7 @@
         <commons-csv.version>1.4</commons-csv.version>
         <commons-io.version>2.6</commons-io.version>   
         <commons-lang.version>2.6</commons-lang.version>
-        <hadoop.version>2.7.0-mapr-1808</hadoop.version>
+        <hadoop.version>2.9.1</hadoop.version>
         <log4j.version>1.2.15</log4j.version>
         <slf4j.version>1.7.10</slf4j.version>
         <vdp.version>5.0.0_2</vdp.version>
@@ -184,7 +184,7 @@
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-hdfs</artifactId>
+            <artifactId>hadoop-hdfs-client</artifactId>
             <version>${hadoop.version}</version>
             <exclusions>
                 <exclusion>
